--- a/apps/rest-countries/src/css/normalize.css
+++ b/apps/rest-countries/src/css/normalize.css
@@ -63,6 +63,7 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100vw;
     overflow-x: hidden;
     font-family: var(--ff-base);
     font-size: var(--fs-300);
